Fix: Change django-ci mysql part

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -36,8 +36,9 @@ jobs:
         pip install -r requirements.txt
     - name: Creating Mysql User
       run: |
-        mysql.server start
-        mysql -uroot -p${{ secrets.ROOT_PSWORD }} -e "create user 'wafflemarket-backend'@'localhost' identified by 'password';grant all privileges on wafflemarket_backend.* to 'wafflemarket-backend'@'localhost';"
+        sudo /etc/init.d/mysql start
+        cd /usr/bin/
+        ./mysql -uroot -p${{ secrets.ROOT_PSWORD }} -e "create user 'wafflemarket-backend'@'localhost' identified by 'password';grant all privileges on wafflemarket_backend.* to 'wafflemarket-backend'@'localhost';"
     - name: Run Migrations
       run: |
         python manage.py migrate
