Chore: Change django-ci

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -36,10 +36,9 @@ jobs:
         pip install -r requirements.txt
     - name: Creating Mysql User
       run: |
-        sudo /etc/init.d/mysql start
+        sudo service mysql start
         cd /usr/bin/
         ./mysql -uroot -p${{ secrets.ROOT_PSWORD }} -e "create user 'wafflemarket-backend'@'localhost' identified by 'password';grant all privileges on wafflemarket_backend.* to 'wafflemarket-backend'@'localhost';"
-        systemctl status mysql.service
       env:
         DBENGINE: django.db.backends.mysql
         DBNAME: wafflemarket_backend
