--- a/wafflemarket/requirements.txt
+++ b/wafflemarket/requirements.txt
@@ -8,9 +8,9 @@ djangorestframework==3.11.1
 djangorestframework-jwt
 django-rest-authtoken
 django-filter
-drf-yasg==1.20.0
-factory-boy
-django_storages
-django-google-oauth
-pillow
-boto3
+drf-yasg==1.20.0 # for swagger
+factory-boy # for django test
+django_storages # for file storage
+django-google-oauth # for google login
+pillow # for imagefield usage
+boto3 # for S3 connection
