Feat: Add thumbnail to article

--- a/wafflemarket/requirements.txt
+++ b/wafflemarket/requirements.txt
@@ -14,3 +14,4 @@ django_storages # for file storage
 django-google-oauth # for google login
 pillow # for imagefield usage
 boto3 # for S3 connection
+django-imagekit # for generating thumbnail
